@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.netnew {
    namespace adapter {
      class com.example.netnew.adapter.NewsDataAdapter {
          - list : List<NewsDataBean>
          - mActivity : Context
          + addItem()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace adapter {
      class com.example.netnew.adapter.NewsDataAdapter.ViewHolder {
          - author_name : TextView
          - date : TextView
          - thumbnail_pic_s : ImageView
          - title : TextView
          + ViewHolder()
      }
    }
  }
  

  com.example.netnew.adapter.NewsDataAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.netnew.adapter.NewsDataAdapter +-down- com.example.netnew.adapter.NewsDataAdapter.ViewHolder
  com.example.netnew.adapter.NewsDataAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
